8224970: ShenandoahRootScanner::roots_do assert is too strong

Reviewed-by: zgu